# SCVP

./: links.txt
Exercise_4/: main.cpp
Exercise_6/: CMakeLists.txt  bus.h  main.cpp  main2.cpp  memory.h
Kahn_process/: CMakeLists.txt  Split.h  main.cpp  main2.cpp
SCVP.artifacts/: CMakeLists.txt
SCVP.artifacts/Exercise1r/: CMakeLists.txt  exor.h  exor_main.cpp  mon.h  nand.h  nand_main.cpp  stim.h
SCVP.artifacts/Exercise2r/: CMakeLists.txt  state_machine.h
SCVP.artifacts/Exercise_1/: CMakeLists.txt  exor.h  exor_main.cpp  nand.h
SCVP.artifacts/Exercise_2/: CMakeLists.txt  state_machine.cpp
SCVP.artifacts/Exercise_3/: CMakeLists.txt  state_machine.h
SCVP.artifacts/Exercise_4/: place.h  place2.h  subnet.h  transition.h  transition2.h
SCVP.artifacts/Exercise_6/: processor.h
SCVP.artifacts/SC_FIFO/: add.h  delay.h
SCVP.artifacts/cpp_playground/: CMakeLists.txt  main.cpp  mon.h  nand.h  sr.cpp  sr_latch.h  state_machine.h  stim.h
SCVP.artifacts/fifo_example/: CMakeLists.txt  main.cpp
SCVP.artifacts/fir/: CMakeLists.txt  main.cpp
SCVP.artifacts/portarrays/: main.cpp
SCVP.artifacts/practice/: CMakeLists.txt  andgate.h  circuit.h  main.cpp  main2.cpp  mon.h  orgate.h
SCVP.artifacts/simplefifor/: CMakeLists.txt  main.cpp
SCVP.artifacts/srlatch/: CMakeLists.txt  main.cpp  mon.h  stim.h
SCVP.artifacts/tlm_lt_initiator_target/: CMakeLists.txt
